# InsurChat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db_test/: chroma.sqlite3
rag/: app_b2c.py  auth.py  config.py  constants.py  datamodels.py  dummy_app_b2c.py  query.py  schema.py  utils.py
rag/chatbot/: dummy_answer.py  llm.py  memory.py  retriever.py  templates.py
